# ackee_school_of_solana_wgx731

./: .gitignore
anchor_project/: Anchor.toml  README.md
anchor_project/programs/solana_todo/: Cargo.toml
anchor_project/programs/solana_todo/src/: errors.rs  lib.rs
anchor_project/programs/todo_list/: Cargo.toml
anchor_project/programs/todo_list/src/: errors.rs  lib.rs  states.rs
anchor_project/programs/todo_list/src/instructions/: add_todo.rs  initialize_todo_list.rs  mark_todo_status.rs  mod.rs  remove_todo.rs
anchor_project/tests/: solana_todo.ts  todo_list.ts
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx
frontend/src/app/demo/: page.tsx
frontend/src/components/demo/: demo-data-access.tsx  demo-feature.tsx  demo-ui.tsx  todo_list.json  todo_list.ts
frontend/src/components/solana/: solana-provider.tsx
